Fix collapsing nav items and display button

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,10 @@
 $grayMediumLight: #eaeaea;
 /* universal */
 
+.container {
+	margin-top: 10px;
+}
+
 html {
   overflow-y: scroll;
 }
